--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "publishConfig": {
         "access": "public"
     },
+    "types": "lib/index.d.ts",
     "scripts": {
         "build": "rollup --config rollup.config.js",
         "build:watch": "npm run build -- --watch",
